# jwt-auth-example

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: linters.yml  tests.yml
auth/: authenticate.py  entities.py  serializers.py  urls.py  views.py
core/: permissions.py
scripts/: startup.sh
service/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_role.py
